# MediSched-Server

./: .env.samples  database.py  main.py  pyproject.toml
admin/: routes.py
appointment/: routes.py
auth/: auth_handler.py  routes.py
doctor/: doctor_request.py  routes.py
doctor/admin/: routes.py
message/: routes.py
models/: appointment.py  doctor_details.py  message.py  user.py
payment/: routes.py
schemas/: user.py
user/: routes.py
utils/: email_utils.py
