[project]
name = "medisched-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beanie>=1.29.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "fastapi-jwt-auth>=0.5.0",
    "motor>=3.7.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[bcrypt]>=2.11.4",
    "python-jose[cryptography]>=3.4.0",
]
