[project]
name = "medisched-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beanie==1.29.0",
    "email-validator==2.2.0",
    "fastapi[standard]==0.115.12",
    "fastapi-jwt-auth>=0.5.0",
    "motor>=3.7.1",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.4.0",
    "uvicorn[standard]>=0.34.2",
    "fastapi-mail==1.4.1",
    "pydantic>=2.11.4",
    "yagmail>=0.15.293",
    "cloudinary>=1.44.0",
    "stripe>=12.1.0",
    "bcrypt==4.0.1"   
]
